# MasterLog

./: CMakeLists.txt  README.md
MasterLog/: CMakeLists.txt
MasterLog/include/: LogBaseLogger.h  LogConsoleLogger.h  LogControl.h  LogDefine.h  LogExport.h  LogFileLogger.h
MasterLog/src/: LogBaseLogger.cpp  LogConsoleLogger.cpp  LogControl.cpp  LogExport.cpp  LogFileLogger.cpp
logsrc/: CMakeLists.txt  MasterLogConfig.h.in  README.md
logsrc/include/: LogBaseLogger.h  LogConsoleLogger.h  LogControl.h  LogDefine.h  LogExport.h  LogFileLogger.h
logsrc/src/: LogBaseLogger.cpp  LogConsoleLogger.cpp  LogControl.cpp  LogExport.cpp  LogFileLogger.cpp
test/: CMakeLists.txt  test.cpp
test/cmake_tests/: CMakeLists.txt
